--- a/html/landing.html
+++ b/html/landing.html
@@ -19,6 +19,13 @@
     <script type="text/javascript" src="{{rootDirectory}}/js/ImprovedInitiative.js"></script>
 </head>
 <body id="landing">
+	<comment>
+	<div class="svg-sprite" style="display:none;">
+	  <svg height="5" width="400" id="horizrule">
+	    <polyline points="0,0 400,2.5 0,5"></polyline>
+	  </svg>
+	</div>
+	</comment>
     <h1 class="improved-initiative">Improved Initiative</h1>
     <div class="content">
         <div class="logo">
