--- a/html/tracker.html
+++ b/html/tracker.html
@@ -18,10 +18,18 @@
     </script>
     
     <script type="text/javascript" src="{{rootDirectory}}/js/ImprovedInitiative.js"></script>
-
+	<link href="http://fonts.googleapis.com/css?family=Lora:700" rel="stylesheet" type="text/css"/>
+	<link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
 </head>
 
 <body id="tracker">
+	<comment>
+	<div class="svg-sprite" style="display:none;">
+	  <svg height="5" id="horizrule">
+	    <polyline points="0,0 400,2.5 0,5"></polyline>
+	  </svg>
+	</div>
+	</comment>
     <div class="modalcontainer">
         <div class="modalblur" data-bind="click: Commander.HideSettings"></div>
         <div class="settings modal" data-bind="component: { name: 'settings', params: { commander: Commander } }"></div>
