--- a/html/playerview.html
+++ b/html/playerview.html
@@ -2,8 +2,8 @@
 <html encounterId="{{encounterId}}">
 
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Lora|Noto+Sans|Oswald|UnifrakturCook:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{rootDirectory}}/css/improved-initiative.css">
-
     <title>Player View - Improved Initiative</title>
     
     <script type="text/javascript">
@@ -18,7 +18,6 @@
     </script>
 
     <script type="text/javascript" src="{{rootDirectory}}/js/ImprovedInitiative.js"></script>
-
 </head>
 
 <body id="playerview">
