Differentiate between players and creatures in tracker

--- a/html/tracker.html
+++ b/html/tracker.html
@@ -2,7 +2,7 @@
 <html encounterId="{{encounterId}}" appInsightsKey="{{appInsightsKey}}">
 
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Lora|Noto+Sans|Oswald|UnifrakturCook:700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lora|Noto+Sans|UnifrakturCook:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{rootDirectory}}/css/improved-initiative.css">
 
     <title>Combat Tracker - Improved Initiative</title>
