--- a/html/playerview.html
+++ b/html/playerview.html
@@ -2,7 +2,7 @@
 <html encounterId="{{encounterId}}">
 
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Lora|Noto+Sans|Oswald|UnifrakturCook:700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lora|Noto+Sans|UnifrakturCook:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{rootDirectory}}/css/improved-initiative.css">
     <title>Player View - Improved Initiative</title>
     
